--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -8,7 +8,7 @@
   align-items: center;
   padding: 0.5rem 1rem;
   border-radius: 0 0 5px 5px;
-  height: 10vh;
+  height: 4rem;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
