--- a/client/src/styles/documents.css
+++ b/client/src/styles/documents.css
@@ -7,16 +7,28 @@
 }
 
 .gutter-row {
-  border: 1px solid black;
+  border: 1px solid rgb(223, 220, 220);
   padding: 0px !important;
   height: 300px;
+  border-radius: 3px;
+  width: 20% !important;
+}
 
+.gutter-row:hover {
+  border: 1px solid #4285F4;
+  cursor: pointer;
 }
 
 .content-preview {
-  background-color: rgb(79, 79, 255);
+  line-height: 1rem;
+  padding: 1rem;
+  background-color: rgba(220, 220, 243, 0.267);
   width: 100%;
   height: 75%;
+}
+
+.content-preview p {
+  font-size: 10px;
 }
 
 .details {
@@ -26,6 +38,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.details h3 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
 
 .more-details {
