--- a/client/src/styles/signup.css
+++ b/client/src/styles/signup.css
@@ -23,7 +23,7 @@
   min-height: 400px;
 }
 
-.signup-form > * {
+.signup-form>* {
   margin-bottom: 1rem;
 }
 
@@ -32,9 +32,15 @@
   bottom: 1rem;
   background: #394867;
 }
+
 .submit-button:hover {
   background: #9ba4b5 !important;
   color: #394867 !important;
   font-weight: bolder;
 }
 
+.signup-form a {
+  text-decoration: none;
+  font-size: 0.8rem;
+  color: black;
+}
