--- a/client/src/styles/documents.css
+++ b/client/src/styles/documents.css
@@ -2,8 +2,8 @@
   padding: 2rem 4rem;
 }
 
-.documents h4 {
-  margin-bottom: 1rem;
+.documents h2 {
+  margin-left: 0.5rem;
 }
 
 .gutter-row {
@@ -17,12 +17,8 @@
 .gutter-row:hover {
   border: 1px solid #4285f4;
   cursor: pointer;
-  
+
 }
-
-/* .row {
-
-} */
 
 
 .content-preview {
@@ -31,6 +27,7 @@
   background-color: rgba(220, 220, 243, 0.267);
   width: 100%;
   height: 75%;
+  overflow: hidden;
 }
 
 .content-preview p {
@@ -47,6 +44,7 @@
 }
 
 .details h3 {
+  width: fit-content;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
