--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Mirza&family=Montserrat:wght@100;200;300;400;500;600&family=Roboto:wght@300&display=swap');
 
 #webpack-dev-server-client-overlay-div {
   display: none !important;
